--- a/family.html
+++ b/family.html
@@ -12,10 +12,10 @@
 	<header>
 	  <nav>
 		<ul>
-			<li><a href = "index.html">About Me</a></li>
-			<li class="active"><a href = "family.html">My Family</a></li>
-			<li><a href = "random.html">Random Stuff</a></li>
-			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
+			<li><a href="index.html">About Me</a></li>
+			<li class="active"><a href="family.html">My Family</a></li>
+			<li><a href="random.html">Random Stuff</a></li>
+			<li><a href="http://www.si.umich.edu">UMSI</a></li>
 		</ul>
 	   </nav>
 	</header>
@@ -26,11 +26,11 @@
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 		
 		<figure>
-			<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
-			<img src = "images/badlands.jpg" width="1000" alt = "Scenic view of the Badlands landscape with layered rock formations">
-			<img src = "images/falling.jpg" width="25" alt = "Family photo at a scenic overlook"/>
-			<img src = "images/rushmore.jpg" width="1000" alt = "Mount Rushmore National Memorial showing the carved presidential faces">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "Interior view of Jewel Cave showing rock formations">
+			<img src="images/wisconsin_dells.jpg" width="25" alt="A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
+			<img src="images/badlands.jpg" width="1000" alt="Scenic view of the Badlands landscape with layered rock formations">
+			<img src="images/falling.jpg" width="25" alt="Family photo at a scenic overlook">
+			<img src="images/rushmore.jpg" width="1000" alt="Mount Rushmore National Memorial showing the carved presidential faces">
+			<img src="images/jewel_cave.jpg" width="25" alt="Interior view of Jewel Cave showing rock formations">
 		</figure>
 		
 		<p>I didn&rsquo;t plan for the fact that the Sturgis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
@@ -41,5 +41,3 @@
 	</footer>
 </body>
 </html>
-
-
