Fix jewel_cave image 404 error: correct file extension case

--- a/family.html
+++ b/family.html
@@ -30,7 +30,7 @@
 			<img src="images/badlands.jpg" width="1000" alt="Scenic view of the Badlands landscape with layered rock formations">
 			<img src="images/falling.jpg" width="25" alt="Family photo at a scenic overlook">
 			<img src="images/rushmore.jpg" width="1000" alt="Mount Rushmore National Memorial showing the carved presidential faces">
-			<img src="images/jewel_cave.jpg" width="25" alt="Interior view of Jewel Cave showing rock formations">
+			<img src="images/jewel_cave.JPG" width="25" alt="Interior view of Jewel Cave showing rock formations">
 		</figure>
 		
 		<p>I didn&rsquo;t plan for the fact that the Sturgis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
