--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!-- Nav is a sematic tag page that aids accessibility -->
 		<nav>
 			<ul>
-				<!-- Since I am on the index file I added class = action to the link to index. -->
+				<!-- Since I am on the index file I added class = active to the link to index. -->
 				<!-- For this homework leave the class on index for all three pages. -->
 				<li class="active"><a href="index.html">About Me</a></li>
 				<li><a href="family.html">My Family</a></li>
